--- a/components/product.module.css
+++ b/components/product.module.css
@@ -1,8 +1,8 @@
 .section {
   display: flex;
 
-  background-color: cornflowerblue;
-  margin-top: 30px;
+  background-color: rgb(221, 238, 221);
+  margin-top: 0px;
   padding: 30px 20px;
   font-weight: 600;
   font-size: 26px;
@@ -15,6 +15,7 @@
   width: 100%;
   align-items: flex-end;
   justify-content: center;
+  color: '18, 120, 74';
 }
 
 .productDetail {
