--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,13 @@
 .homePageImage {
   width: 100%;
+  filter: blur(0px) grayscale(60%);
+}
 
-  filter: blur(5px) grayscale(70%);
+.homePageImageSub {
+  width: 60%;
+  padding: 50px 50px;
+  margin-left: 300px;
+  filter: blur(0px) grayscale(50%);
 }
 
 .textBlock {
@@ -15,7 +21,29 @@
   font-size: 60px;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: 600;
-  background-color: rgba(121, 197, 131, 0.192);
+}
+
+.textBlockSub {
+  font-size: 30px;
+}
+
+.textBlockSecondSub {
+  font-size: 20px;
+  font-family: fantasy;
+}
+
+.homePageText {
+  padding: 60px 120px;
+  font-size: 21px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 300;
+  margin-top: 30px;
+  margin-left: 50px;
+  margin-right: 50px;
+  color: rgb(8, 43, 24);
+  border-style: solid;
+  border-radius: 10px;
+  border-color: rgb(8, 43, 24);
 }
 
 .main {
