--- a/pages/products/model.module.css
+++ b/pages/products/model.module.css
@@ -59,3 +59,10 @@
   transition: 400ms;
   cursor: pointer;
 }
+
+.buttonWrapper {
+  display: flex;
+  flex-direction: column;
+  margin-left: 40px;
+  justify-content: center;
+}
